update invoice and payment
